# sdlpango

./: CMakeLists.txt  Makefile.in  aclocal.m4  config.guess  config.sub  configure  configure.in
VisualC2003/: Makefile.in
cmake/: FindGlib.cmake  Findpango.cmake  MacroCreateLibtoolFile.cmake
docs/: Makefile.in
src/: CMakeLists.txt  Makefile.in  SDL_Pango.c  SDL_Pango.h
